@@ -83,6 +83,7 @@
                 <div class="ib-colon"></div>
                 <div class="ib-hash"></div>
                 <div class="ib-quote"></div>
+                <div class="ib-speech-mark"></div>
             </div>
         </div>
 
