@@ -1,6 +1,7 @@
 v0.2.0:
 - Added Other - Hourglass.
 - Added Character - Quote.
+- Added Character - Speech Mark.
 
 v0.1.0:
 - All 46 Icons.
